--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App</title>
-    <script src="all.min.js"></script>
-    <script src="moment.js"></script>
+    <script src="/all.min.js"></script>
+    <script src="/moment.js"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
@@ -47,6 +47,6 @@
             </div>
         </div>
     </div>
-    <script src="index.js"></script>
+    <script src="/index.js"></script>
 </body>
 </html>
